--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,6 @@ tensorflow>=2.4.1
 torch>=1.8.0
 torchdiffeq>=0.2.3
 torchpack>=0.3.0
-torchquantum>=0.1
+# torchquantum>=0.1
 torchvision>=0.9.0.dev20210130
 tqdm>=4.56.0
